--- a/Dockerfile.devbox
+++ b/Dockerfile.devbox
@@ -118,4 +118,4 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 CMD ["zsh"]
 
 # Expose common development ports
-EXPOSE 3000 3001 4000 5000 8000 8080 8888 9000
+EXPOSE 3000
