--- a/Dockerfile.devbox
+++ b/Dockerfile.devbox
@@ -44,6 +44,9 @@ RUN curl -L https://raw.githubusercontent.com/rupa/z/master/z.sh -o /usr/local/b
 RUN locale-gen en_US.UTF-8 && \
     echo "export LANG=en_US.UTF-8\nexport LANGUAGE=en_US:en\nexport LC_ALL=en_US.UTF-8" >> /root/.zshrc
 
+# Add devbox prefix to prompt
+RUN echo 'export PS1="[devbox] $PS1"' >> /root/.zshrc
+
 # =============================================================================
 # PYTHON DEVELOPMENT
 # =============================================================================
