--- a/Dockerfile.devbox
+++ b/Dockerfile.devbox
@@ -99,6 +99,9 @@ RUN apt-get install -y \
 # ADDITIONAL DEVELOPMENT TOOLS (Uncomment to enable)
 # =============================================================================
 
+# Claude Code
+RUN npm install -g @anthropic-ai/claude-code
+
 # Vim/Neovim
 # RUN apt-get install -y vim neovim
 
